# parsec-mux

./: .gitignore  README.md  pyproject.toml
parsec_mux/: __main__.py  api.py  auth.py  config.py  sessions.py  tui.py
swift-app/: .gitignore  Package.swift  build.sh
swift-app/Sources/CParsecBridge/: parsec_bridge.c
swift-app/Sources/CParsecBridge/include/: module.modulemap  parsec_bridge.h
swift-app/Sources/PMuxViewer/: App.swift  ParsecClient.swift  SessionAuth.swift
swift-app/Sources/PMuxViewer/App/: AppState.swift  MetalContext.swift  PMuxApp.swift  SessionManager.swift
swift-app/Sources/PMuxViewer/Audio/: AudioMixer.swift  AudioRingBuffer.swift
swift-app/Sources/PMuxViewer/Model/: FavoritesManager.swift  ParsecAPIClient.swift  StreamFrame.swift
swift-app/Sources/PMuxViewer/Theme/: PMuxComponents.swift  PMuxTheme.swift
swift-app/Sources/PMuxViewer/Views/: ContentView.swift
swift-app/Sources/PMuxViewer/Views/Panels/: AudioMixerPanel.swift  DebugOverlay.swift  QualityPicker.swift  SettingsPane.swift  StatusBar.swift
swift-app/Sources/PMuxViewer/Views/Renderer/: ParsecInputView.swift  ParsecRenderView.swift  SingleStreamMTKView.swift
swift-app/Sources/PMuxViewer/Views/Sidebar/: HostBrowserRow.swift  SessionSidebar.swift  SessionSidebarRow.swift
swift-app/Sources/PMuxViewer/Views/Tabs/: SessionTab.swift  SessionTabBar.swift
swift-app/Tests/PMuxViewerTests/: BridgeTests.swift
viewer/: Makefile  viewer.c
